<resources>
    <string name="app_name">GameMetascore</string>
    <string name="critics_rating">critics: %s</string>
    <string name="users_rating">users: %s</string>
    <string name="add_game_explained">Start adding games to your collection</string>
    <string name="no_game_found">No games found with that name</string>
    <string name="add_game_initial">Search by game title</string>
    <string name="played">Played</string>
    <string name="liked">Liked</string>
    <string name="delete">Delete</string>
    <string name="game_deleted">Game deleted</string>
    <string name="undo">Undo</string>
    <string name="order">Order</string>
    <string name="add">Add</string>
    <string name="games">Games</string>
    <string name="import_export">Import/Export</string>
    <string name="game_import_label">Import games from file</string>
    <string name="game_export_label">Export games to file</string>
    <string name="game_import_explain_label">The file should contain the list of games in json as this example</string>
    <string name="game_import_bt">Open file</string>
    <string name="game_export_bt">Export</string>
    <string name="add_game_no_results">No games found</string>
    <string name="add_game_empty">Search by game title</string>
    <string name="add_game_search_hint">Game name</string>
    <string name="liked_game_content_description">liked game</string>
    <string name="played_game_content_description">played game</string>
    <string name="delete_game_content_description">delete game</string>
    <string name="game_cover_content_description">game cover</string>
    <string name="game_add_cover_content_description">game cover</string>
    <string name="sort_content_description">sort games</string>
    <string name="game_add_action_content_description">add game</string>
    <string name="game_import_action_content_description">import games</string>
    <string name="sync_games_background">Games data being updated on background</string>
</resources>