<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvImportFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/game_import_bg"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/game_import_label"
            android:textColor="@color/game_import_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvJson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_import_explain_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvImportFile" />

        <ImageView
            android:id="@+id/ivJson"
            android:layout_width="180dp"
            android:layout_height="206dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/game_import_action_content_description"
            android:src="@drawable/iv_json"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJson" />

        <Button
            android:id="@+id/btImportFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_import_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivJson" />

        <TextView
            android:id="@+id/tvExportFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/game_import_bg"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/game_export_label"
            android:textColor="@color/game_import_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btImportFile" />

        <Button
            android:id="@+id/btExportFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_export_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExportFile" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvImportFile,tvJson,ivJson,btImportFile,tvExportFile,btExportFile" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>