<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="100dp"
            android:layout_height="133dp"
            android:contentDescription="@string/game_cover_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:maxLines="2"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvTotalRating"
            app:layout_constraintStart_toEndOf="@+id/ivCover"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="the-last-of-us-remastered" />

        <TextView
            android:id="@+id/tvCriticsRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tvUsersRating"
            app:layout_constraintEnd_toStartOf="@id/tvTotalRating"
            app:layout_constraintStart_toEndOf="@+id/ivCover"
            tools:text="critics: 95" />

        <TextView
            android:id="@+id/tvUsersRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTotalRating"
            app:layout_constraintStart_toEndOf="@+id/ivCover"
            tools:text="userscore: 88" />

        <ImageView
            android:id="@+id/ivLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/liked_game_content_description"
            android:src="@drawable/ic_liked_24"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimary"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/played_game_content_description"
            android:src="@drawable/ic_videogame_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorPrimary"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTotalRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ivPlayed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLiked"
            tools:text="92" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>